[package]
name = "weather"
description = "A CLI tool to get weather for a specific location and date"
authors = ["skupr <semargal@gmail.com>"]
repository = "https://github.com/semargal/weather"
license-file = "LICENSE"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
confy = "0.5.1"
clap = { version = "4.1.8", features = ["derive"] }
ureq = { version = "2.6.2", features = ["json"] }
chrono = "0.4.23"
